The default is true but it can be useful to set it to false (especially
when I<wanttrash> is also used).

=item *

A new feature has been added to B<sm>.  When the B<-c> flag is used,
it shows a clear, decoded form of the storage API token.  This
was previously done by the contrib B<showtoken> script developed
by Olaf Titz and Marco d'Itri.

=item *

The B<O> flag in F<newsfeeds> now relies on the contents of the
Injection-Info: header (or X-Trace: header if there is no Injection-Info:
header) to determine the origin of an article.

=item *

A new "unsigned long" type bas been added to the configuration parser.  It
will properly warn the news administrator when a variable supposed to
be positive contains a negative integer.  It will prevent INN
from crashing at several places where it did not expect negative
values.

=item *

B<innxbatch> and B<innxmit> now recognize the new C<403> code introduced
by S<RFC 3977> for a problem preventing the action from being taken.

=item *

HDR and OVER commands now return the right C<423> code (instead of C<420>)
when the current article number is used but the article no longer exists.

=item *

B<actsync>, B<inews>, B<innxbatch>, B<innxmit>, B<nntpget> and B<rnews>
can now authenticate on news servers which only expect a username,
without password, in conformity with S<RFC 4643>.

=item *

The keyword generation code now generates a Keywords: header only
if the original article does not already have one.  The generated
Keywords: header no longer begins with a comma.  Moreover, if
keyword generation is set to true in F<inn.conf> but the
Keywords: header is not stored in the overview, the news
administrator is warned and keyword generation deactivated
because it would be run for nothing.

=item *

Fixed two segfaults in keyword generation.  The first occurred when
an article already had a Keywords: header the length of which is greater
than the I<keylimit> parameter.  The second was caused by a possible